// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<message> <footer> parses BREAKING CHANGE literal as <token> 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "fix",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
                "start": Object {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
              },
              "type": "separator",
              "value": ":",
            },
          ],
          "type": "summary-sep",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "address major bug",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 39,
                      "line": 1,
                      "offset": 38,
                    },
                    "start": Object {
                      "column": 24,
                      "line": 1,
                      "offset": 23,
                    },
                  },
                  "type": "breaking-change",
                  "value": "BREAKING CHANGE",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 39,
                  "line": 1,
                  "offset": 38,
                },
                "start": Object {
                  "column": 24,
                  "line": 1,
                  "offset": 23,
                },
              },
              "type": "token",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 40,
                      "line": 1,
                      "offset": 39,
                    },
                    "start": Object {
                      "column": 39,
                      "line": 1,
                      "offset": 38,
                    },
                  },
                  "type": "separator",
                  "value": ":",
                },
              ],
              "type": "summary-sep",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 64,
                      "line": 1,
                      "offset": 63,
                    },
                    "start": Object {
                      "column": 41,
                      "line": 1,
                      "offset": 40,
                    },
                  },
                  "type": "text",
                  "value": "this change is breaking",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 64,
                  "line": 1,
                  "offset": 63,
                },
                "start": Object {
                  "column": 41,
                  "line": 1,
                  "offset": 40,
                },
              },
              "type": "value",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 64,
              "line": 1,
              "offset": 63,
            },
            "start": Object {
              "column": 24,
              "line": 1,
              "offset": 23,
            },
          },
          "type": "footer",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 64,
          "line": 1,
          "offset": 63,
        },
        "start": Object {
          "column": 24,
          "line": 1,
          "offset": 23,
        },
      },
      "type": "body-footer",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 64,
      "line": 1,
      "offset": 63,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <footer> parses commit summary footer 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "chore",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
                "start": Object {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
              },
              "type": "separator",
              "value": ":",
            },
          ],
          "type": "summary-sep",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 33,
              "line": 1,
              "offset": 32,
            },
            "start": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
          },
          "type": "text",
          "value": "contains multiple commits",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 33,
          "line": 1,
          "offset": 32,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 37,
                      "line": 1,
                      "offset": 36,
                    },
                    "start": Object {
                      "column": 34,
                      "line": 1,
                      "offset": 33,
                    },
                  },
                  "type": "type",
                  "value": "fix",
                },
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 44,
                      "line": 1,
                      "offset": 43,
                    },
                    "start": Object {
                      "column": 38,
                      "line": 1,
                      "offset": 37,
                    },
                  },
                  "type": "scope",
                  "value": "parser",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 45,
                  "line": 1,
                  "offset": 44,
                },
                "start": Object {
                  "column": 70,
                  "line": 1,
                  "offset": 69,
                },
              },
              "type": "token",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 46,
                      "line": 1,
                      "offset": 45,
                    },
                    "start": Object {
                      "column": 45,
                      "line": 1,
                      "offset": 44,
                    },
                  },
                  "type": "separator",
                  "value": ":",
                },
              ],
              "type": "summary-sep",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 70,
                      "line": 1,
                      "offset": 69,
                    },
                    "start": Object {
                      "column": 47,
                      "line": 1,
                      "offset": 46,
                    },
                  },
                  "type": "text",
                  "value": "address bug with parser",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 70,
                  "line": 1,
                  "offset": 69,
                },
                "start": Object {
                  "column": 47,
                  "line": 1,
                  "offset": 46,
                },
              },
              "type": "value",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 70,
              "line": 1,
              "offset": 69,
            },
            "start": Object {
              "column": 34,
              "line": 1,
              "offset": 33,
            },
          },
          "type": "footer",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 70,
          "line": 1,
          "offset": 69,
        },
        "start": Object {
          "column": 34,
          "line": 1,
          "offset": 33,
        },
      },
      "type": "body-footer",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 70,
      "line": 1,
      "offset": 69,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <footer> parses simple token/separator/value form of footer 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "fix",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
                "start": Object {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
              },
              "type": "separator",
              "value": ":",
            },
          ],
          "type": "summary-sep",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "address major bug",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 30,
                      "line": 1,
                      "offset": 29,
                    },
                    "start": Object {
                      "column": 24,
                      "line": 1,
                      "offset": 23,
                    },
                  },
                  "type": "type",
                  "value": "Author",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 30,
                  "line": 1,
                  "offset": 29,
                },
                "start": Object {
                  "column": 41,
                  "line": 1,
                  "offset": 40,
                },
              },
              "type": "token",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 31,
                      "line": 1,
                      "offset": 30,
                    },
                    "start": Object {
                      "column": 30,
                      "line": 1,
                      "offset": 29,
                    },
                  },
                  "type": "separator",
                  "value": ":",
                },
              ],
              "type": "summary-sep",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 41,
                      "line": 1,
                      "offset": 40,
                    },
                    "start": Object {
                      "column": 32,
                      "line": 1,
                      "offset": 31,
                    },
                  },
                  "type": "text",
                  "value": "@byCedric",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 41,
                  "line": 1,
                  "offset": 40,
                },
                "start": Object {
                  "column": 32,
                  "line": 1,
                  "offset": 31,
                },
              },
              "type": "value",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 41,
              "line": 1,
              "offset": 40,
            },
            "start": Object {
              "column": 24,
              "line": 1,
              "offset": 23,
            },
          },
          "type": "footer",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 41,
          "line": 1,
          "offset": 40,
        },
        "start": Object {
          "column": 24,
          "line": 1,
          "offset": 23,
        },
      },
      "type": "body-footer",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 41,
      "line": 1,
      "offset": 40,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <footer> supports multiline BREAKING CHANGES, via continuation 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "fix",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
                "start": Object {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
              },
              "type": "separator",
              "value": ":",
            },
          ],
          "type": "summary-sep",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 23,
              "line": 1,
              "offset": 22,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "address major bug",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 23,
          "line": 1,
          "offset": 22,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 39,
                      "line": 1,
                      "offset": 38,
                    },
                    "start": Object {
                      "column": 24,
                      "line": 1,
                      "offset": 23,
                    },
                  },
                  "type": "breaking-change",
                  "value": "BREAKING CHANGE",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 39,
                  "line": 1,
                  "offset": 38,
                },
                "start": Object {
                  "column": 24,
                  "line": 1,
                  "offset": 23,
                },
              },
              "type": "token",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 40,
                      "line": 1,
                      "offset": 39,
                    },
                    "start": Object {
                      "column": 39,
                      "line": 1,
                      "offset": 38,
                    },
                  },
                  "type": "separator",
                  "value": ":",
                },
              ],
              "type": "summary-sep",
            },
            Object {
              "children": Array [
                Object {
                  "position": Object {
                    "end": Object {
                      "column": 70,
                      "line": 1,
                      "offset": 69,
                    },
                    "start": Object {
                      "column": 41,
                      "line": 1,
                      "offset": 40,
                    },
                  },
                  "type": "text",
                  "value": "first line of breaking change",
                },
                Object {
                  "children": Array [
                    Object {
                      "position": Object {
                        "end": Object {
                          "column": 102,
                          "line": 1,
                          "offset": 101,
                        },
                        "start": Object {
                          "column": 72,
                          "line": 1,
                          "offset": 71,
                        },
                      },
                      "type": "text",
                      "value": "second line of breaking change",
                    },
                  ],
                  "position": Object {
                    "end": Object {
                      "column": 102,
                      "line": 1,
                      "offset": 101,
                    },
                    "start": Object {
                      "column": 70,
                      "line": 1,
                      "offset": 69,
                    },
                  },
                  "type": "continuation",
                },
                Object {
                  "children": Array [
                    Object {
                      "position": Object {
                        "end": Object {
                          "column": 133,
                          "line": 1,
                          "offset": 132,
                        },
                        "start": Object {
                          "column": 104,
                          "line": 1,
                          "offset": 103,
                        },
                      },
                      "type": "text",
                      "value": "third line of breaking change",
                    },
                  ],
                  "position": Object {
                    "end": Object {
                      "column": 133,
                      "line": 1,
                      "offset": 132,
                    },
                    "start": Object {
                      "column": 102,
                      "line": 1,
                      "offset": 101,
                    },
                  },
                  "type": "continuation",
                },
              ],
              "position": Object {
                "end": Object {
                  "column": 133,
                  "line": 1,
                  "offset": 132,
                },
                "start": Object {
                  "column": 41,
                  "line": 1,
                  "offset": 40,
                },
              },
              "type": "value",
            },
          ],
          "position": Object {
            "end": Object {
              "column": 133,
              "line": 1,
              "offset": 132,
            },
            "start": Object {
              "column": 24,
              "line": 1,
              "offset": 23,
            },
          },
          "type": "footer",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 133,
          "line": 1,
          "offset": 132,
        },
        "start": Object {
          "column": 24,
          "line": 1,
          "offset": 23,
        },
      },
      "type": "body-footer",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 133,
      "line": 1,
      "offset": 132,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <summary> parses breaking change marker 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "feat",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
                "start": Object {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
              },
              "type": "breaking-change",
              "value": "!",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 7,
                  "line": 1,
                  "offset": 6,
                },
                "start": Object {
                  "column": 6,
                  "line": 1,
                  "offset": 5,
                },
              },
              "type": "separator",
              "value": ":",
            },
          ],
          "type": "summary-sep",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 30,
              "line": 1,
              "offset": 29,
            },
            "start": Object {
              "column": 8,
              "line": 1,
              "offset": 7,
            },
          },
          "type": "text",
          "value": "add support for scopes",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 30,
          "line": 1,
          "offset": 29,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 30,
      "line": 1,
      "offset": 29,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <summary> parses breaking change marker 2`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "feat",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 17,
              "line": 1,
              "offset": 16,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "scope",
          "value": "http parser",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 19,
                  "line": 1,
                  "offset": 18,
                },
                "start": Object {
                  "column": 18,
                  "line": 1,
                  "offset": 17,
                },
              },
              "type": "breaking-change",
              "value": "!",
            },
            Object {
              "position": Object {
                "end": Object {
                  "column": 20,
                  "line": 1,
                  "offset": 19,
                },
                "start": Object {
                  "column": 19,
                  "line": 1,
                  "offset": 18,
                },
              },
              "type": "separator",
              "value": ":",
            },
          ],
          "type": "summary-sep",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 43,
              "line": 1,
              "offset": 42,
            },
            "start": Object {
              "column": 21,
              "line": 1,
              "offset": 20,
            },
          },
          "type": "text",
          "value": "add support for scopes",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 43,
          "line": 1,
          "offset": 42,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 43,
      "line": 1,
      "offset": 42,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <summary> parses summary with no scope 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 4,
              "line": 1,
              "offset": 3,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "fix",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 5,
                  "line": 1,
                  "offset": 4,
                },
                "start": Object {
                  "column": 4,
                  "line": 1,
                  "offset": 3,
                },
              },
              "type": "separator",
              "value": ":",
            },
          ],
          "type": "summary-sep",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 24,
              "line": 1,
              "offset": 23,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "text",
          "value": "a really weird bug",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 24,
          "line": 1,
          "offset": 23,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 24,
      "line": 1,
      "offset": 23,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;

exports[`<message> <summary> parses summary with scope 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "position": Object {
            "end": Object {
              "column": 5,
              "line": 1,
              "offset": 4,
            },
            "start": Object {
              "column": 1,
              "line": 1,
              "offset": 0,
            },
          },
          "type": "type",
          "value": "feat",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 12,
              "line": 1,
              "offset": 11,
            },
            "start": Object {
              "column": 6,
              "line": 1,
              "offset": 5,
            },
          },
          "type": "scope",
          "value": "parser",
        },
        Object {
          "children": Array [
            Object {
              "position": Object {
                "end": Object {
                  "column": 14,
                  "line": 1,
                  "offset": 13,
                },
                "start": Object {
                  "column": 13,
                  "line": 1,
                  "offset": 12,
                },
              },
              "type": "separator",
              "value": ":",
            },
          ],
          "type": "summary-sep",
        },
        Object {
          "position": Object {
            "end": Object {
              "column": 37,
              "line": 1,
              "offset": 36,
            },
            "start": Object {
              "column": 15,
              "line": 1,
              "offset": 14,
            },
          },
          "type": "text",
          "value": "add support for scopes",
        },
      ],
      "position": Object {
        "end": Object {
          "column": 37,
          "line": 1,
          "offset": 36,
        },
        "start": Object {
          "column": 1,
          "line": 1,
          "offset": 0,
        },
      },
      "type": "summary",
    },
  ],
  "position": Object {
    "end": Object {
      "column": 37,
      "line": 1,
      "offset": 36,
    },
    "start": Object {
      "column": 1,
      "line": 1,
      "offset": 0,
    },
  },
  "type": "message",
}
`;
